# cloud_native_AI

./: README.md  compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
auth_service/: Dockerfile  pyproject.toml
auth_service/app/: main.py  utils.py
kafka/: compose.yaml
kafka/consumer/app/: main.py
kafka/init/kafka/: Dockerfile
kafka/kafka_consumer/: .env  Dockerfile.dev
kafka/kafka_consumer/app/: main.py
kafka/kafka_producer/app/: main.py  settings.py
kafka/producer/app/: main.py
learn_python/: Dockerfile.dev  pyproject.toml
learn_python/src/: fastapi.py
project_python/: main.py
src/: fastapi.py  main.py
tests/: test_fastapi.py  test_first_function.py
todo_service/: .env  compose.yaml  env_backup
todo_service/src/: fastapi.py
