[tool.poetry]
name = "project-python"
version = "0.1.0"
description = ""
authors = ["Anis Momin <anis_momin@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pytest = "^8.3.2"
fastapi = "^0.112.0"
uvicorn = {extras = ["standard"], version = "^0.30.5"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
