[tool.poetry]
name = "project-python"
version = "0.1.0"
description = ""
authors = ["Anis Momin <anis_momin@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"
fastapi = "^0.112.0"
uvicorn = {extras = ["standard"], version = "^0.30.5"}
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
